@@ -247,6 +247,11 @@ Release date: TBA
 
   Closes #6414
 
+* Fix a false positive for ``undefined-loop-variable`` when the ``else`` of a ``for``
+  loop raises or returns.
+
+  Closes #5971
+
 
 What's New in Pylint 2.13.7?
 ============================
